tests/snapshots/test_runner__tests__compiler__typecheck__generic_function_2__generic_function_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let <A> identity (a: A): A = a

entry
  let x = "hello" .identity;
  let y: Int = x;
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/generic_function_2/generic_function_2.kk:5:16
  │
5 │   let y: Int = x;
  │                ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + String    |
    +---------------+-------------+
